[gd_scene load_steps=14 format=3 uid="uid://cwxspd8lu6ifb"]

[ext_resource type="Script" uid="uid://c2i4vaaf07jk" path="res://scenes/Gem.gd" id="1_st00i"]
[ext_resource type="Texture2D" uid="uid://8fpqr18au1ip" path="res://assets/mystic_woods_free_2.2/sprites/objects/chest_01.png" id="1_x3db6"]
[ext_resource type="AudioStream" uid="uid://byhwr2ddcalwq" path="res://assets/FreeSFX/GameSFX/Charge/Retro Charge Magic 11.wav" id="3_tx2gm"]

[sub_resource type="SystemFont" id="SystemFont_o8oug"]
subpixel_positioning = 0

[sub_resource type="AtlasTexture" id="AtlasTexture_knmju"]
atlas = ExtResource("1_x3db6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvfgk"]
atlas = ExtResource("1_x3db6")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv7mw"]
atlas = ExtResource("1_x3db6")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8ags"]
atlas = ExtResource("1_x3db6")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wj4tc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_knmju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvfgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xv7mw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8ags")
}],
"loop": false,
"name": &"Chest_open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7tx7"]
size = Vector2(25, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ykj7"]
size = Vector2(25, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o8oug"]
size = Vector2(48, 43)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o8oug"]
bg_color = Color(0, 1, 0.192157, 1)

[node name="Gem" type="Node2D"]
script = ExtResource("1_st00i")

[node name="GemStore" type="Button" parent="."]
z_index = 2
offset_left = -66.0
offset_top = 12.0
offset_right = 66.0
offset_bottom = 44.0
theme_override_colors/font_outline_color = Color(0, 1, 0, 1)
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_o8oug")
theme_override_font_sizes/font_size = 7
text = "WOULD YOU LIKE TO PURCHASE 
5 HEALTH FOR 10 WOOD"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 1.9375)
sprite_frames = SubResource("SpriteFrames_wj4tc")
animation = &"Chest_open"

[node name="Gemhit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gemhit"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_w7tx7")

[node name="GemColl" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GemColl"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_8ykj7")

[node name="GemHealth" type="Label" parent="."]
visible = false
offset_left = -21.0
offset_top = -22.0
offset_right = 89.0
offset_bottom = 1.0
scale = Vector2(0.3, 0.4)
theme_override_colors/font_color = Color(1, 0.318249, 0.253521, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "GEM HEALTH: "

[node name="Gemmouse" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gemmouse"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_o8oug")

[node name="progressIncrease" type="Timer" parent="."]
wait_time = 2.0

[node name="GemProgress" type="ProgressBar" parent="."]
offset_left = -30.0
offset_top = -22.0
offset_right = 30.0
offset_bottom = -14.0
theme_override_styles/fill = SubResource("StyleBoxFlat_o8oug")
step = 5.0
show_percentage = false

[node name="Gemfinish" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_tx2gm")

[connection signal="wave_done" from="." to="." method="_on_wave_done"]
[connection signal="mouse_entered" from="GemStore" to="." method="_on_gem_store_mouse_entered"]
[connection signal="mouse_exited" from="GemStore" to="." method="_on_gem_store_mouse_exited"]
[connection signal="pressed" from="GemStore" to="." method="_on_gem_store_pressed"]
[connection signal="body_entered" from="Gemhit" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Gemhit" to="." method="_on_gemhit_body_exited"]
[connection signal="mouse_entered" from="Gemmouse" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Gemmouse" to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="progressIncrease" to="." method="_on_progress_increase_timeout"]
